# tictactoe-1011

./: Game.py  README.md  app.py  pyproject.toml  start.py  tic-tac-toe.py  tictactoe.py
models/: Board.py  Cell.py  Game.py  KeyTriple.py  TripleSet.py
tests/: test_tictactoe.py
tictactoe/: game.py
tictactoe/scripts/: start.py
