[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = ""
authors = ["funkylen <funkylen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "tictactoe.scripts.start:main"
